Tue May 27 20:19:22 2008  Akinori MUSHA  <knu@iDaemons.org>

	* array.c (rb_ary_slice_bang): Return an empty array instead of
	  nil when pos is valid and len is adjusted from a valid value to
	  zero; caught by RubySpec.

Tue May 27 19:45:20 2008  Akinori MUSHA  <knu@iDaemons.org>

	* numeric.c (flo_divmod): Revert the behavior change; do not
	  suppress an exception when div is NaN or Inf. [ruby-dev:34857]

Tue May 27 19:24:40 2008  Akinori MUSHA  <knu@iDaemons.org>

	* enum.c (enum_to_a): Pass arguments through to #each().
	  (enum_sort): Follow the enum_to_a signature change.
	  (enum_reverse_each): Add #reverse_each().

Tue May 27 18:54:02 2008  Akinori MUSHA  <knu@iDaemons.org>

	* ext/stringio/stringio.c (strio_each_char, Init_stringio): Add
	  StringIO#{each_char,chars}.

Tue May 27 17:59:34 2008  Akinori MUSHA  <knu@iDaemons.org>

	* ext/stringio/stringio.c (strio_each): Return an enumerator if no
	  block is given.
	  (strio_each_byte): Return an enumerator if no block is given,
	  and return self if one is given as the rdoc says.

	* io.c (rb_io_each_byte): Fix rdoc.  IO#each_byte returns self,
	  not nil.

Tue May 27 16:02:58 2008  Akinori MUSHA  <knu@iDaemons.org>

	* eval.c (rb_mod_module_exec, Init_eval): Add
	  Module#{module_exec,class_exec}.

Tue May 27 15:36:37 2008  Akinori MUSHA  <knu@iDaemons.org>

	* io.c (rb_io_each_char, argf_each_char, Init_IO):
	  Add {IO#,ARGF.}{each_char,chars}.

Tue May 27 13:46:52 2008  Akinori MUSHA  <knu@iDaemons.org>

	* ext/stringio/stringio.c (Init_stringio): Define
	  StringIO#{getbyte,readbyte}.

Tue May 27 13:38:51 2008  Akinori MUSHA  <knu@iDaemons.org>

	* io.c (Init_IO): Define {IO#,ARGF.}{getbyte,readbyte}.

Tue May 27 13:26:15 2008  Akinori MUSHA  <knu@iDaemons.org>

	* ext/stringio/stringio.c (Init_stringio): Define #bytes and
	  #lines.

Tue May 27 13:20:35 2008  Akinori MUSHA  <knu@iDaemons.org>

	* io.c: (rb_io_lines, rb_io_bytes, Init_IO): Define
	  IO#{lines,bytes} and ARGF.{lines,bytes}.
